--- a/user-authentication/about.html
+++ b/user-authentication/about.html
@@ -1,345 +1,423 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - Ermunai Organic Farm Foods</title>
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<style>
-  /* Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  font-family: Arial, sans-serif;
-  color: #333;
-  line-height: 1.6;
-  background: #fff;
-}
+  <style>
+    /* Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-/* ---------- Header ---------- */
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: white;
-  padding: 15px 40px;
-  border-bottom: 2px solid #eee;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
+    body {
+      font-family: Arial, sans-serif;
+      color: #333;
+      line-height: 1.6;
+      background: #fff;
+    }
 
-header .logo {
-  display: flex;
-  align-items: center;
-  font-weight: bold;
-  color: green;
-  font-size: 18px;
-}
+    /* ---------- Header ---------- */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: white;
+      padding: 15px 40px;
+      border-bottom: 2px solid #eee;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
 
-header .logo img {
-  height: 60px;
-  margin-right: 10px;
-}
+    header .logo {
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+      color: green;
+      font-size: 18px;
+    }
 
-header nav ul {
-  display: flex;
-  list-style: none;
-}
+    header .logo img {
+      height: 60px;
+      margin-right: 10px;
+    }
 
-header nav ul li {
-  margin: 0 15px;
-}
+    header nav ul {
+      display: flex;
+      list-style: none;
+    }
 
-header nav ul li a {
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
-}
+    header nav ul li {
+      margin: 0 15px;
+    }
 
-header nav ul li a.active,
-header nav ul li a:hover {
-  color: green;
-}
+    header nav ul li a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
 
-.header-right {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
+    header nav ul li a.active,
+    header nav ul li a:hover {
+      color: green;
+    }
 
-/* Buttons */
-.btn-login,
-.btn-signup {
-  padding: 8px 16px;
-  font-size: 14px;
-  border-radius: 6px;
-  text-decoration: none;
-  font-weight: 600;
-  transition: 0.3s;
-}
-.btn-login {
-  background: transparent;
-  border: 2px solid green;
-  color: green;
-}
-.btn-login:hover {
-  background: green;
-  color: white;
-}
-.btn-signup {
-  background: green;
-  border: 2px solid green;
-  color: white;
-}
-.btn-signup:hover {
-  background: #244021;
-  border-color: #244021;
-}
+    .header-right {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
 
-/* Hamburger (hidden by default) */
-.hamburger {
-  display: none;
-  font-size: 24px;
-  cursor: pointer;
-  color: green;
-}
+    /* Buttons */
+    .btn-login,
+    .btn-signup {
+      padding: 8px 16px;
+      font-size: 14px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: 0.3s;
+    }
 
-/* ---------- Mobile Styles ---------- */
-@media (max-width: 900px) {
-  header {
-    padding: 15px 20px;
-  }
+    .btn-login {
+      background: transparent;
+      border: 2px solid green;
+      color: green;
+    }
 
-  /* Hide normal menu */
-  header nav {
-    position: fixed;
-    top: 0;
-    right: -250px;
-    width: 250px;
-    height: 100%;
-    background: white;
-    border-left: 2px solid #eee;
-    box-shadow: -2px 0 6px rgba(0,0,0,0.1);
-    transition: right 0.3s ease;
-    padding-top: 80px;
-    z-index: 1200;
-  }
+    .btn-login:hover {
+      background: green;
+      color: white;
+    }
 
-  header nav ul {
-    flex-direction: column;
-    align-items: start;
-    padding-left: 30px;
-  }
+    .btn-signup {
+      background: green;
+      border: 2px solid green;
+      color: white;
+    }
 
-  header nav ul li {
-    margin: 15px 0;
-  }
+    .btn-signup:hover {
+      background: #244021;
+      border-color: #244021;
+    }
 
-  .header-right {
-    gap: 10px;
-  }
+    /* Hamburger (hidden by default) */
+    .hamburger {
+      display: none;
+      font-size: 24px;
+      cursor: pointer;
+      color: green;
+    }
 
-  .hamburger {
-    display: block;
-  }
+    /* ---------- Mobile Styles ---------- */
+    @media (max-width: 900px) {
+      header {
+        padding: 15px 20px;
+      }
 
-  /* Show menu when active */
-  header nav.active {
-    right: 0;
-  }
-}
+      /* Hide normal menu */
+      header nav {
+        position: fixed;
+        top: 0;
+        right: -250px;
+        width: 250px;
+        height: 100%;
+        background: white;
+        border-left: 2px solid #eee;
+        box-shadow: -2px 0 6px rgba(0, 0, 0, 0.1);
+        transition: right 0.3s ease;
+        padding-top: 80px;
+        z-index: 1200;
+      }
+
+      header nav ul {
+        flex-direction: column;
+        align-items: start;
+        padding-left: 30px;
+      }
+
+      header nav ul li {
+        margin: 15px 0;
+      }
+
+      .header-right {
+        gap: 10px;
+      }
+
+      .hamburger {
+        display: block;
+      }
+
+      /* Show menu when active */
+      header nav.active {
+        right: 0;
+      }
+    }
 
 
-/* Cart */
-.cart {
-  font-size: 22px;
-  color: #333;
-  cursor: pointer;
-}
-.cart i{
-  color: green;
-}
+    /* Cart */
+    .cart {
+      font-size: 22px;
+      color: #333;
+      cursor: pointer;
+    }
 
-/* Buttons */
-.btn-login, .btn-signup {
-  padding: 8px 16px;
-  font-size: 14px;
-  border-radius: 6px;
-  text-decoration: none;
-  font-weight: 600;
-  transition: 0.3s;
-}
+    .cart i {
+      color: green;
+    }
 
-.btn-login {
-  background: transparent;
-  border: 2px solid green;
-  color: green;
-}
+    /* Buttons */
+    .btn-login,
+    .btn-signup {
+      padding: 8px 16px;
+      font-size: 14px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: 0.3s;
+    }
 
-.btn-login:hover {
-  background: green;
-  color: white;
-}
+    .btn-login {
+      background: transparent;
+      border: 2px solid green;
+      color: green;
+    }
 
-.btn-signup {
-  background: green;
-  border: 2px solid green;
-  color: white;
-}
+    .btn-login:hover {
+      background: green;
+      color: white;
+    }
 
-.btn-signup:hover {
-  background: #244021;
-  border-color: #244021;
-}
+    .btn-signup {
+      background: green;
+      border: 2px solid green;
+      color: white;
+    }
 
-/* About Heading */
-.about-heading {
-  text-align: center;
-  padding: 60px 20px;
-  background: #f5faf7;
-}
-.about-heading h1 {
-  font-size: 32px;
-  margin-bottom: 15px;
-  color: #1d4d2d;
-}
-.about-heading p {
-  font-size: 18px;
-  color: #555;
-}
+    .btn-signup:hover {
+      background: #244021;
+      border-color: #244021;
+    }
 
-/* Story + Mission/Vision */
-.story-mission {
-  display: flex;
-  gap: 40px;
-  padding: 60px 80px;
-  align-items: flex-start;
-}
-.story {
-  flex: 2;
-}
-.story h2 {
-  margin-bottom: 20px;
-  color: #1d4d2d;
-}
-.mission-vision {
-  flex: 1;
-  background: #f0f8f4;
-  padding: 25px;
-  border-radius: 10px;
-}
-.mission-vision h3 {
-  color: #1d4d2d;
-  margin-top: 15px;
-  margin-bottom: 8px;
-}
+    /* About Heading */
+    .about-heading {
+      text-align: center;
+      padding: 60px 20px;
+      background: #f5faf7;
+    }
 
-/* Values */
-.values {
-  text-align: center;
-  padding: 60px 40px;
-  background: #fff;
-}
-.values h2 {
-  margin-bottom: 15px;
-  color: #1d4d2d;
-}
-.values-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); /* ✅ 4 columns by default (desktop/laptop) */
-  gap: 25px;
-  margin-top: 30px;
-}
-.value-card {
-  background: #f9fdfb;
-  border: 1px solid #e5eee9;
-  padding: 25px;
-  border-radius: 12px;
-  text-align: center;
-  transition: 0.3s;
-}
-.value-card i {
-  font-size: 40px;
-  color: #1d4d2d;
-  margin-bottom: 15px;
-}
-.value-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-}
+    .about-heading h1 {
+      font-size: 32px;
+      margin-bottom: 15px;
+      color: #1d4d2d;
+    }
 
-/* Footer */
-footer { background: green; color: white; padding: 30px 20px; }
-.footer-container {
-  display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px;
-}
-.footer-section h3, .footer-section h4 { margin-bottom: 10px; }
-.footer-section ul { list-style: none; }
-.footer-section ul li { margin-bottom: 8px; }
-.footer-section ul li a { color: white; text-decoration: none; }
+    .about-heading p {
+      font-size: 18px;
+      color: #555;
+    }
 
-.social { margin-top: 20px; text-align: center; }
-.social a { color: white; font-size: 18px; margin: 0 10px; text-decoration: none; }
+    /* Story + Mission/Vision */
+    .story-mission {
+      display: flex;
+      gap: 40px;
+      padding: 60px 80px;
+      align-items: flex-start;
+    }
 
-.whatsapp { margin: 15px 0; text-align: center; }
-.whatsapp a {
-  background: #25D366; color: white;
-  padding: 10px 20px; border-radius: 5px;
-  font-weight: bold; text-decoration: none;
-}
+    .story {
+      flex: 2;
+    }
 
-.footer-bottom { text-align: center; margin-top: 20px; border-top: 1px solid white; padding-top: 10px; }
+    .story h2 {
+      margin-bottom: 20px;
+      color: #1d4d2d;
+    }
 
-/* Responsive */
-@media (max-width: 768px) {
-  header nav ul { flex-direction: column; text-align: center; }
-  header nav ul li { margin: 10px 0; }
+    .mission-vision {
+      flex: 1;
+      background: #f0f8f4;
+      padding: 25px;
+      border-radius: 10px;
+    }
 
-  /* ✅ Values grid for mobile: 2 columns (so 4 rows for 8 cards) */
-  .values-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
+    .mission-vision h3 {
+      color: #1d4d2d;
+      margin-top: 15px;
+      margin-bottom: 8px;
+    }
 
-@media (max-width: 480px) {
-  header { flex-direction: column; }
-  header .logo img { height: 30px; }
-  .banner-buttons .btn { padding: 8px 15px; font-size: 14px; }
-}
-</style>
+    /* Values */
+    .values {
+      text-align: center;
+      padding: 60px 40px;
+      background: #fff;
+    }
+
+    .values h2 {
+      margin-bottom: 15px;
+      color: #1d4d2d;
+    }
+
+    .values-grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      /* ✅ 4 columns by default (desktop/laptop) */
+      gap: 25px;
+      margin-top: 30px;
+    }
+
+    .value-card {
+      background: #f9fdfb;
+      border: 1px solid #e5eee9;
+      padding: 25px;
+      border-radius: 12px;
+      text-align: center;
+      transition: 0.3s;
+    }
+
+    .value-card i {
+      font-size: 40px;
+      color: #1d4d2d;
+      margin-bottom: 15px;
+    }
+
+    .value-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Footer */
+    footer {
+      background: green;
+      color: white;
+      padding: 30px 20px;
+    }
+
+    .footer-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+    }
+
+    .footer-section h3,
+    .footer-section h4 {
+      margin-bottom: 10px;
+    }
+
+    .footer-section ul {
+      list-style: none;
+    }
+
+    .footer-section ul li {
+      margin-bottom: 8px;
+    }
+
+    .footer-section ul li a {
+      color: white;
+      text-decoration: none;
+    }
+
+    .social {
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    .social a {
+      color: white;
+      font-size: 18px;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+
+    .whatsapp {
+      margin: 15px 0;
+      text-align: center;
+    }
+
+    .whatsapp a {
+      background: #25D366;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    .footer-bottom {
+      text-align: center;
+      margin-top: 20px;
+      border-top: 1px solid white;
+      padding-top: 10px;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      header nav ul {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      header nav ul li {
+        margin: 10px 0;
+      }
+
+      /* ✅ Values grid for mobile: 2 columns (so 4 rows for 8 cards) */
+      .values-grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    @media (max-width: 480px) {
+      header {
+        flex-direction: column;
+      }
+
+      header .logo img {
+        height: 30px;
+      }
+
+      .banner-buttons .btn {
+        padding: 8px 15px;
+        font-size: 14px;
+      }
+    }
+  </style>
 </head>
+
 <body>
-<header>
-  <div class="logo">
-    <img src="logo.jpg" alt="Logo">
-    <span>Erumunai Organic Farm Foods</span>
-  </div>
+  <header>
+    <div class="logo">
+      <img src="logo.jpg" alt="Logo">
+      <span>Erumunai Organic Farm Foods</span>
+    </div>
 
-  <!-- Navigation -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="shop.html" class="active">Shop</a></li>
-      <li><a href="purchases.html">Purchases</a></li> <!-- ✅ New Item -->
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+    <!-- Navigation -->
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="shop.html" class="active">Shop</a></li>
+        <li><a href="purchases.html">Purchases</a></li> <!-- ✅ New Item -->
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-  <!-- Right side -->
-  <div class="header-right">
-    <div class="cart"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
-    <a href="login.html" class="btn-login">Login</a>
-    <a href="signup.html" class="btn-signup">Sign Up</a>
-    <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
-  </div>
-</header>
-   <!-- About Heading -->
+    <!-- Right side -->
+    <div class="header-right">
+      <div class="cart"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
+      <a href="login.html" class="btn-login">Login</a>
+      <a href="signup.html" class="btn-signup">Sign Up</a>
+      <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
+    </div>
+  </header>
+  <!-- About Heading -->
   <section class="about-heading">
     <h1>About Ermunai Organic Farm Foods</h1>
     <p>We are passionate about bringing you the finest organic farm products,<br>
@@ -350,23 +428,32 @@ footer { background: green; color: white; padding: 30px 20px; }
   <section class="story-mission">
     <div class="story">
       <h2>Our Story</h2>
-  <p>
-    At Ermunai Organic Farm Foods, our journey began with a passion for preserving the rich culinary heritage of South India. 
-    We focus on **Traditional Native Seeds**, millets, and age-old grains to create products that are both authentic and convenient. 
-    From **Ready-to-Cook and Ready-to-Eat meals** to **Millet-based Instant Premixes** for breakfast and dinner, our offerings make it easy to enjoy wholesome, traditional meals in modern lifestyles.
-  </p>
-  <p>
-    Our aim is to provide food that nourishes not only the body but also the culture and traditions behind every grain. 
-    Every product reflects our commitment to taste, quality, and sustainability, allowing you to experience the richness of heritage foods at your table.
-  </p>    </div>
+      <p>
+        At Ermunai Organic Farm Foods, our journey began with a passion for preserving the rich culinary heritage of
+        South India.
+        We focus on **Traditional Native Seeds**, millets, and age-old grains to create products that are both authentic
+        and convenient.
+        From **Ready-to-Cook and Ready-to-Eat meals** to **Millet-based Instant Premixes** for breakfast and dinner, our
+        offerings make it easy to enjoy wholesome, traditional meals in modern lifestyles.
+      </p>
+      <p>
+        Our aim is to provide food that nourishes not only the body but also the culture and traditions behind every
+        grain.
+        Every product reflects our commitment to taste, quality, and sustainability, allowing you to experience the
+        richness of heritage foods at your table.
+      </p>
+    </div>
 
     <div class="mission-vision">
-  <h3>Our Mission</h3>
-  <p>To provide authentic Traditional Native Seeds-based food products that are ready-to-cook, ready-to-eat, and millet-based instant premixes for breakfast and dinner, while preserving culinary heritage and supporting sustainable farming practices.</p>
-  
-  <h3>Our Vision</h3>
-  <p>To be recognized as the leading brand for traditional and nutritious South Indian meals, offering convenient, wholesome products derived from native seeds and millets, and promoting wellness through heritage foods.</p>
-</div>
+      <h3>Our Mission</h3>
+      <p>To provide authentic Traditional Native Seeds-based food products that are ready-to-cook, ready-to-eat, and
+        millet-based instant premixes for breakfast and dinner, while preserving culinary heritage and supporting
+        sustainable farming practices.</p>
+
+      <h3>Our Vision</h3>
+      <p>To be recognized as the leading brand for traditional and nutritious South Indian meals, offering convenient,
+        wholesome products derived from native seeds and millets, and promoting wellness through heritage foods.</p>
+    </div>
 
   </section>
 
@@ -423,7 +510,8 @@ footer { background: green; color: white; padding: 30px 20px; }
     <div class="footer-container">
       <div class="footer-section about">
         <h3>Erumunai Organic Farm Foods</h3>
-        <p>Bringing you the finest organic farm products with traditional recipes and modern quality standards for healthy living.</p>
+        <p>Bringing you the finest organic farm products with traditional recipes and modern quality standards for
+          healthy living.</p>
         <p><i class="fa fa-map-marker-alt"></i> 123 Farm Road, Organic Valley, Tamil Nadu 600001</p>
         <p><i class="fa fa-phone"></i> +91 98765 43210</p>
         <p><i class="fa fa-envelope"></i> hello@ermunaiorganicfarms.com</p>
@@ -479,12 +567,13 @@ footer { background: green; color: white; padding: 30px 20px; }
   </footer>
   <script>
     const hamburger = document.querySelector(".hamburger");
-  const nav = document.querySelector("header nav");
+    const nav = document.querySelector("header nav");
 
-  hamburger.addEventListener("click", () => {
-    nav.classList.toggle("active");
-  });
+    hamburger.addEventListener("click", () => {
+      nav.classList.toggle("active");
+    });
   </script>
 
 </body>
+
 </html>
