--- a/user-authentication/shop.html
+++ b/user-authentication/shop.html
@@ -21,181 +21,187 @@
     }
 
     /* ---------- Header ---------- */
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: white;
-  padding: 15px 40px;
-  border-bottom: 2px solid #eee;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: white;
+      padding: 15px 40px;
+      border-bottom: 2px solid #eee;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
 
-header .logo {
-  display: flex;
-  align-items: center;
-  font-weight: bold;
-  color: green;
-  font-size: 18px;
-}
+    header .logo {
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+      color: green;
+      font-size: 18px;
+    }
 
-header .logo img {
-  height: 60px;
-  margin-right: 10px;
-}
+    header .logo img {
+      height: 60px;
+      margin-right: 10px;
+    }
 
-header nav ul {
-  display: flex;
-  list-style: none;
-}
+    header nav ul {
+      display: flex;
+      list-style: none;
+    }
 
-header nav ul li {
-  margin: 0 15px;
-}
+    header nav ul li {
+      margin: 0 15px;
+    }
 
-header nav ul li a {
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
-}
+    header nav ul li a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
 
-header nav ul li a.active,
-header nav ul li a:hover {
-  color: green;
-}
+    header nav ul li a.active,
+    header nav ul li a:hover {
+      color: green;
+    }
 
-.header-right {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
+    .header-right {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
 
-/* Buttons */
-.btn-login,
-.btn-signup {
-  padding: 8px 16px;
-  font-size: 14px;
-  border-radius: 6px;
-  text-decoration: none;
-  font-weight: 600;
-  transition: 0.3s;
-}
-.btn-login {
-  background: transparent;
-  border: 2px solid green;
-  color: green;
-}
-.btn-login:hover {
-  background: green;
-  color: white;
-}
-.btn-signup {
-  background: green;
-  border: 2px solid green;
-  color: white;
-}
-.btn-signup:hover {
-  background: #244021;
-  border-color: #244021;
-}
+    /* Buttons */
+    .btn-login,
+    .btn-signup {
+      padding: 8px 16px;
+      font-size: 14px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: 0.3s;
+    }
 
-/* Hamburger (hidden by default) */
-.hamburger {
-  display: none;
-  font-size: 24px;
-  cursor: pointer;
-  color: green;
-}
+    .btn-login {
+      background: transparent;
+      border: 2px solid green;
+      color: green;
+    }
 
-/* ---------- Mobile Styles ---------- */
-@media (max-width: 900px) {
-  header {
-    padding: 15px 20px;
-  }
+    .btn-login:hover {
+      background: green;
+      color: white;
+    }
 
-  /* Hide normal menu */
-  header nav {
-    position: fixed;
-    top: 0;
-    right: -250px;
-    width: 250px;
-    height: 100%;
-    background: white;
-    border-left: 2px solid #eee;
-    box-shadow: -2px 0 6px rgba(0,0,0,0.1);
-    transition: right 0.3s ease;
-    padding-top: 80px;
-    z-index: 1200;
-  }
+    .btn-signup {
+      background: green;
+      border: 2px solid green;
+      color: white;
+    }
 
-  header nav ul {
-    flex-direction: column;
-    align-items: start;
-    padding-left: 30px;
-  }
+    .btn-signup:hover {
+      background: #244021;
+      border-color: #244021;
+    }
 
-  header nav ul li {
-    margin: 15px 0;
-  }
+    /* Hamburger (hidden by default) */
+    .hamburger {
+      display: none;
+      font-size: 24px;
+      cursor: pointer;
+      color: green;
+    }
 
-  .header-right {
-    gap: 10px;
-  }
+    /* ---------- Mobile Styles ---------- */
+    @media (max-width: 900px) {
+      header {
+        padding: 15px 20px;
+      }
 
-  .hamburger {
-    display: block;
-  }
+      /* Hide normal menu */
+      header nav {
+        position: fixed;
+        top: 0;
+        right: -250px;
+        width: 250px;
+        height: 100%;
+        background: white;
+        border-left: 2px solid #eee;
+        box-shadow: -2px 0 6px rgba(0, 0, 0, 0.1);
+        transition: right 0.3s ease;
+        padding-top: 80px;
+        z-index: 1200;
+      }
 
-  /* Show menu when active */
-  header nav.active {
-    right: 0;
-  }
-}
+      header nav ul {
+        flex-direction: column;
+        align-items: start;
+        padding-left: 30px;
+      }
+
+      header nav ul li {
+        margin: 15px 0;
+      }
+
+      .header-right {
+        gap: 10px;
+      }
+
+      .hamburger {
+        display: block;
+      }
+
+      /* Show menu when active */
+      header nav.active {
+        right: 0;
+      }
+    }
 
 
-/* Cart */
-.cart {
-  font-size: 22px;
-  color: #333;
-  cursor: pointer;
-}
-.cart i{
-  color: green;
-}
+    /* Cart */
+    .cart {
+      font-size: 22px;
+      color: #333;
+      cursor: pointer;
+    }
 
-/* Buttons */
-.btn-login, .btn-signup {
-  padding: 8px 16px;
-  font-size: 14px;
-  border-radius: 6px;
-  text-decoration: none;
-  font-weight: 600;
-  transition: 0.3s;
-}
+    .cart i {
+      color: green;
+    }
 
-.btn-login {
-  background: transparent;
-  border: 2px solid green;
-  color: green;
-}
+    /* Buttons */
+    .btn-login,
+    .btn-signup {
+      padding: 8px 16px;
+      font-size: 14px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: 0.3s;
+    }
 
-.btn-login:hover {
-  background: green;
-  color: white;
-}
+    .btn-login {
+      background: transparent;
+      border: 2px solid green;
+      color: green;
+    }
 
-.btn-signup {
-  background: green;
-  border: 2px solid green;
-  color: white;
-}
+    .btn-login:hover {
+      background: green;
+      color: white;
+    }
 
-.btn-signup:hover {
-  background: #244021;
-  border-color: #244021;
-}
+    .btn-signup {
+      background: green;
+      border: 2px solid green;
+      color: white;
+    }
+
+    .btn-signup:hover {
+      background: #244021;
+      border-color: #244021;
+    }
 
     /* ---------- Filter Bar ---------- */
     .filter-bar {
@@ -370,31 +376,31 @@ header nav ul li a:hover {
 
 <body>
 
-<header>
-  <div class="logo">
-    <img src="logo.jpg" alt="Logo">
-    <span>Erumunai Organic Farm Foods</span>
-  </div>
+  <header>
+    <div class="logo">
+      <img src="logo.jpg" alt="Logo">
+      <span>Erumunai Organic Farm Foods</span>
+    </div>
 
-  <!-- Navigation -->
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="shop.html" class="active">Shop</a></li>
-      <li><a href="purchases.html">Purchases</a></li> <!-- ✅ New Item -->
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+    <!-- Navigation -->
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="shop.html" class="active">Shop</a></li>
+        <li><a href="purchases.html">Purchases</a></li> <!-- ✅ New Item -->
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-  <!-- Right side -->
-  <div class="header-right">
-    <div class="cart"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
-    <a href="login.html" class="btn-login">Login</a>
-    <a href="signup.html" class="btn-signup">Sign Up</a>
-    <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
-  </div>
-</header>
+    <!-- Right side -->
+    <div class="header-right">
+      <div class="cart"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
+      <a href="login.html" class="btn-login">Login</a>
+      <a href="signup.html" class="btn-signup">Sign Up</a>
+      <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
+    </div>
+  </header>
 
   <section class="hero" style="text-align:center;padding:40px 20px;">
     <h1>Shop Our Products</h1>
@@ -417,13 +423,13 @@ header nav ul li a:hover {
   <script type="module">
 
     const hamburger = document.querySelector(".hamburger");
-  const nav = document.querySelector("header nav");
+    const nav = document.querySelector("header nav");
 
-  hamburger.addEventListener("click", () => {
-    nav.classList.toggle("active");
-  });
+    hamburger.addEventListener("click", () => {
+      nav.classList.toggle("active");
+    });
 
-  
+
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
