--- a/user-authentication/contact.html
+++ b/user-authentication/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us - Ermumai Organic Farm Foods</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     /* Reset + Base */
@@ -13,12 +13,11 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
     }
 
     body {
-      background: #fafafa;
-      color: #333;
+      background: #fdf6ec;
+      font-family: Arial, sans-serif;
       line-height: 1.6;
     }
 
@@ -205,22 +204,24 @@
       border-color: #244021;
     }
 
-
     /* Hero */
     .hero {
       text-align: center;
       padding: 60px 20px 40px;
-      background: #f2f8f2;
+      background: #e8f9f1;
+      border-radius: 0 0 20px 20px;
     }
 
     .hero h1 {
-      font-size: 36px;
+      font-size: 38px;
       color: #2d4c2a;
       margin-bottom: 10px;
+      font-weight: 700;
     }
 
     .hero p {
       color: #555;
+      font-weight: 500;
     }
 
     /* Contact Section */
@@ -237,10 +238,15 @@
       display: flex;
       gap: 15px;
       margin-bottom: 20px;
-      background: #fff;
+      background: #fffaf5;
       padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    }
+
+    .contact-card h3 {
+      font-weight: 700;
+      color: #2d4c2a;
     }
 
     .contact-card .icon {
@@ -253,6 +259,7 @@
       background: #e6f9ee;
       border-left: 4px solid #25d366;
       border-radius: 10px;
+      font-weight: 600;
     }
 
     .whatsapp-btn {
@@ -274,6 +281,7 @@
     .contact-form h2 {
       margin-bottom: 20px;
       color: #2d4c2a;
+      font-weight: 700;
     }
 
     form {
@@ -325,32 +333,14 @@
       color: #777;
     }
 
-    /* Find Us */
-    .find-us {
-      text-align: center;
-      padding: 60px 20px;
-      background: #fff;
+    .contact-form,
+    .hero p {
+      font-weight: 600;
+      font-weight: bold;
     }
 
-    .find-us h2 {
-      color: #2d4c2a;
-      margin-bottom: 10px;
-    }
 
-    .location-box {
-      margin-top: 20px;
-      padding: 20px;
-      border: 1px solid #eee;
-      border-radius: 10px;
-      background: #f9f9f9;
-    }
-
-    .map-note {
-      font-size: 13px;
-      color: #777;
-    }
-
-    /* Footer */
+     /* ✅ Footer */
     footer {
       background: green;
       color: white;
@@ -358,14 +348,17 @@
     }
 
     .footer-container {
+      max-width: 1400px;
+      margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
     }
 
     .footer-section h3,
     .footer-section h4 {
       margin-bottom: 10px;
+      font-weight: 800;
     }
 
     .footer-section ul {
@@ -379,18 +372,13 @@
     .footer-section ul li a {
       color: white;
       text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s ease, text-decoration 0.3s ease;
     }
 
-    .social {
-      margin-top: 20px;
-      text-align: center;
-    }
-
-    .social a {
-      color: white;
-      font-size: 18px;
-      margin: 0 10px;
-      text-decoration: none;
+    .footer-section ul li a:hover {
+      color: #ffd700;
+      text-decoration: underline;
     }
 
     .whatsapp {
@@ -414,59 +402,33 @@
       padding-top: 10px;
     }
 
+
     /* Responsive */
     @media (max-width: 768px) {
-      header nav ul {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      header nav ul li {
-        margin: 10px 0;
-      }
-
-      .slide img {
-        height: 250px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      header {
-        flex-direction: column;
-      }
-
-      header .logo img {
-        height: 30px;
-      }
-
-      .slide img {
-        height: 200px;
-      }
-
-      .banner-buttons .btn {
-        padding: 8px 15px;
-        font-size: 14px;
+      .contact-container {
+        grid-template-columns: 1fr;
       }
     }
   </style>
 </head>
 
 <body>
+
   <!-- Header -->
   <header>
     <div class="logo">
       <img src="logo.jpg" alt="Logo">
-      <span>Erumunai Organic Farm Foods</span>
+      <span>Ermunai Organic Farm Foods</span>
     </div>
 
     <!-- Navigation -->
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="shop.html" class="active">Shop</a></li>
-        <li><a href="purchases.html">Purchases</a></li> <!-- ✅ New Item -->
+        <li><a href="shop.html" >Shop</a></li>
+        <li><a href="purchase.html">Purchases</a></li> <!-- ✅ New Item -->
         <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
       </ul>
     </nav>
 
@@ -479,7 +441,7 @@
     </div>
   </header>
 
-  <!-- Hero -->
+  <!-- Hero Section -->
   <section class="hero">
     <h1>Contact Us</h1>
     <p>We’d love to hear from you! Get in touch with us for orders, inquiries, or to learn more about our organic
@@ -488,14 +450,14 @@
 
   <!-- Contact Section -->
   <section class="contact-container">
-    <!-- Left Side -->
+    <!-- Left Side Info -->
     <div class="contact-info">
       <div class="contact-card">
         <div class="icon">📍</div>
         <div>
           <h3>Visit Us</h3>
           <p>M/s. Ermunai Organic Farm Foods,<br>Plot No. 8, Ramalingam St.,BFI,<br>Muraliram Srinivas Flats,<br>
-            Ullagaram,<br>Chennai - 600 091</p>
+            Ullagaram,<br>Chennai - 600 091</p>
         </div>
       </div>
       <div class="contact-card">
@@ -503,18 +465,17 @@
         <div>
           <h3>Call Us</h3>
           <p>Customer care +91 9841231996<br>What's app business +91 9840752833</p>
-
         </div>
       </div>
       <div class="contact-card">
         <div class="icon">✉️</div>
         <div>
           <h3>Email Us</h3>
-          <p>ermunaiorganicfarm@gmail.com<br></p>
+          <p>ermunaiorganicfarm@gmail.com</p>
         </div>
       </div>
       <div class="whatsapp-box">
-        <p><strong>💬 Quick Order on WhatsApp</strong><br>For faster service, place your order directly on WhatsApp!</p>
+        <p>💬 <strong>Quick Order on WhatsApp</strong><br>Place your order instantly via WhatsApp!</p>
         <a href="#" class="whatsapp-btn">Order on WhatsApp</a>
       </div>
     </div>
@@ -538,58 +499,55 @@
       <p class="note">We’ll get back to you within 24 hours!</p>
     </div>
   </section>
-  <!-- Footer -->
+
+  <!-- ✅ Footer -->
   <footer>
     <div class="footer-container">
       <div class="footer-section about">
-        <h3>Erumunai Organic Farm Foods</h3>
-        <p>Bringing you the finest organic farm products with traditional recipes and modern quality standards for
-          healthy living.</p>
-        <p><i class="fa fa-map-marker-alt"></i> 123 Farm Road, Organic Valley, Tamil Nadu 600001</p>
-        <p><i class="fa fa-phone"></i> +91 98765 43210</p>
-        <p><i class="fa fa-envelope"></i> hello@ermunaiorganicfarms.com</p>
+        <h3>Ermunai Organic Farm Foods</h3>
+        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods,<br>Plot No. 8, Ramalingam
+          St.,BFI,<br>Muraliram Srinivas Flats,<br>Ullagaram,<br>Chennai - 600 091.</p>
+        <p><i class="fa fa-phone"></i> +91 9841231996</p>
+        <p><i class="fab fa-whatsapp"></i> +91 9840752833</p>
+        <p><i class="fa fa-envelope"></i> ermunaiorganicfarm@gmail.com</p>
       </div>
 
       <div class="footer-section company">
         <h4>Company</h4>
         <ul>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Our Story</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Press</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
 
       <div class="footer-section products">
         <h4>Products</h4>
         <ul>
-          <li><a href="#">Spice Powders</a></li>
+          <li><a href="#">Ready-to-cook Instant Mixes</a></li>
+          <li><a href="#">Instant Soup Mix</a></li>
+          <li><a href="#">Idli Podi's</a></li>
           <li><a href="#">Herbal Products</a></li>
-          <li><a href="#">Ready Mixes</a></li>
-          <li><a href="#">Pickles & Thokku</a></li>
         </ul>
       </div>
 
-      <div class="footer-section support">
-        <h4>Support</h4>
+      <div class="footer-section follow-us">
+        <h4><i class="fas fa-share-alt"></i> Follow Us</h4>
         <ul>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Shipping Info</a></li>
-          <li><a href="#">Returns</a></li>
+          <li><i class="fab fa-facebook-f"></i> <a href="https://www.facebook.com/ermunaiorganicfoods"
+              target="_blank">Facebook</a></li>
+          <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/ermunaiorganic"
+              target="_blank">Instagram</a></li>
+          <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ermunai-organic-farm-217035363"
+              target="_blank">LinkedIn</a></li>
+          <li><i class="fab fa-youtube"></i> <a href="https://youtube.com/@ermunaiorganicfarm"
+              target="_blank">YouTube</a></li>
         </ul>
       </div>
     </div>
 
-    <!-- Social & WhatsApp -->
-    <div class="social">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
-    </div>
     <div class="whatsapp">
-      <a href="https://wa.me/919876543210" target="_blank">
+      <a href="https://wa.me/919841231996" target="_blank">
         <i class="fab fa-whatsapp"></i> Order on WhatsApp
       </a>
     </div>
@@ -598,14 +556,7 @@
       <p>© 2024 Ermunai Organic Farm Foods. All rights reserved.</p>
     </div>
   </footer>
-  <script>
-    const hamburger = document.querySelector(".hamburger");
-    const nav = document.querySelector("header nav");
 
-    hamburger.addEventListener("click", () => {
-      nav.classList.toggle("active");
-    });
-  </script>
 </body>
 
 </html>
