--- a/user-authentication/index.html
+++ b/user-authentication/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Erumunai Organic Farm Foods</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
   <!-- Font Awesome for icons -->
   <style>
     /* Reset */
@@ -482,7 +483,7 @@
       margin-top: 8px;
     }
 
-    /* Footer */
+     /* ✅ Footer */
     footer {
       background: green;
       color: white;
@@ -490,14 +491,17 @@
     }
 
     .footer-container {
+      max-width: 1400px;
+      margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
     }
 
     .footer-section h3,
     .footer-section h4 {
       margin-bottom: 10px;
+      font-weight: 800;
     }
 
     .footer-section ul {
@@ -511,18 +515,13 @@
     .footer-section ul li a {
       color: white;
       text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s ease, text-decoration 0.3s ease;
     }
 
-    .social {
-      margin-top: 20px;
-      text-align: center;
-    }
-
-    .social a {
-      color: white;
-      font-size: 18px;
-      margin: 0 10px;
-      text-decoration: none;
+    .footer-section ul li a:hover {
+      color: #ffd700;
+      text-decoration: underline;
     }
 
     .whatsapp {
@@ -545,6 +544,7 @@
       border-top: 1px solid white;
       padding-top: 10px;
     }
+
 
     /* Responsive */
     @media (max-width: 768px) {
@@ -589,15 +589,15 @@
   <header>
     <div class="logo">
       <img src="logo.jpg" alt="Logo">
-      <span>Erumunai Organic Farm Foods</span>
+      <span>Ermunai Organic Farm Foods</span>
     </div>
 
     <!-- Navigation -->
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="shop.html" class="active">Shop</a></li>
-        <li><a href="purchases.html">Purchases</a></li> <!-- ✅ New Item -->
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="shop.html" >Shop</a></li>
+        <li><a href="purchase.html">Purchases</a></li> <!-- ✅ New Item -->
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -617,13 +617,10 @@
   <section class="banner">
     <div class="slider">
       <div class="slide active">
-        <img src="banner1.jpg" alt="Banner 1">
+        <img src="./images/banner.png" alt="Banner 1">
       </div>
       <div class="slide">
-        <img src="banner2.jpg" alt="Banner 2">
-      </div>
-      <div class="slide">
-        <img src="banner3.jpg" alt="Banner 3">
+        <img src="./images/banner2.png" alt="Banner 2">
       </div>
     </div>
 
@@ -650,7 +647,7 @@
       <div class="product-grid">
         <div class="product-card">
           <div class="card-image">
-            <img src="ready to cook.png" alt="Ready-to-cook Instant Mixes">
+            <img src="./images/ready to cook.png" alt="Ready-to-cook Instant Mixes">
             <span class="badge">11+ varieties</span>
           </div>
           <div class="card-content">
@@ -662,7 +659,7 @@
 
         <div class="product-card">
           <div class="card-image">
-            <img src="soupmix.png" alt="Instant Soup Mix">
+            <img src="./images/soupmix.png" alt="Instant Soup Mix">
             <span class="badge">3+ flavors</span>
           </div>
           <div class="card-content">
@@ -674,7 +671,7 @@
 
         <div class="product-card">
           <div class="card-image">
-            <img src="idlipodi.png" alt="Idli Podi's">
+            <img src="./images/idlipodi.png" alt="Idli Podi's">
             <span class="badge">7+ varieties</span>
           </div>
           <div class="card-content">
@@ -686,7 +683,7 @@
 
         <div class="product-card">
           <div class="card-image">
-            <img src="instant.png" alt="Instant">
+            <img src="./images/instant.png" alt="Instant">
             <span class="badge">4+ products</span>
           </div>
           <div class="card-content">
@@ -698,7 +695,7 @@
 
         <div class="product-card">
           <div class="card-image">
-            <img src="herbal.png" alt="Herbal Products">
+            <img src="./images/herbal.png" alt="Herbal Products">
             <span class="badge">4+ products</span>
           </div>
           <div class="card-content">
@@ -747,58 +744,54 @@
     </div>
   </section>
 
-  <!-- Footer -->
+  <!-- ✅ Footer -->
   <footer>
     <div class="footer-container">
       <div class="footer-section about">
-        <h3>Erumunai Organic Farm Foods</h3>
-        <p>Bringing you the finest organic farm products with traditional recipes and modern quality standards for
-          healthy living.</p>
-        <p><i class="fa fa-map-marker-alt"></i> 123 Farm Road, Organic Valley, Tamil Nadu 600001</p>
-        <p><i class="fa fa-phone"></i> +91 98765 43210</p>
-        <p><i class="fa fa-envelope"></i> hello@ermunaiorganicfarms.com</p>
+        <h3>Ermunai Organic Farm Foods</h3>
+        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods,<br>Plot No. 8, Ramalingam
+          St.,BFI,<br>Muraliram Srinivas Flats,<br>Ullagaram,<br>Chennai - 600 091.</p>
+        <p><i class="fa fa-phone"></i> +91 9841231996</p>
+        <p><i class="fab fa-whatsapp"></i> +91 9840752833</p>
+        <p><i class="fa fa-envelope"></i> ermunaiorganicfarm@gmail.com</p>
       </div>
 
       <div class="footer-section company">
         <h4>Company</h4>
         <ul>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Our Story</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Press</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
 
       <div class="footer-section products">
         <h4>Products</h4>
         <ul>
-          <li><a href="#">Spice Powders</a></li>
+          <li><a href="#">Ready-to-cook Instant Mixes</a></li>
+          <li><a href="#">Instant Soup Mix</a></li>
+          <li><a href="#">Idli Podi's</a></li>
           <li><a href="#">Herbal Products</a></li>
-          <li><a href="#">Ready Mixes</a></li>
-          <li><a href="#">Pickles & Thokku</a></li>
         </ul>
       </div>
 
-      <div class="footer-section support">
-        <h4>Support</h4>
+      <div class="footer-section follow-us">
+        <h4><i class="fas fa-share-alt"></i> Follow Us</h4>
         <ul>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Shipping Info</a></li>
-          <li><a href="#">Returns</a></li>
+          <li><i class="fab fa-facebook-f"></i> <a href="https://www.facebook.com/ermunaiorganicfoods"
+              target="_blank">Facebook</a></li>
+          <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/ermunaiorganic"
+              target="_blank">Instagram</a></li>
+          <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ermunai-organic-farm-217035363"
+              target="_blank">LinkedIn</a></li>
+          <li><i class="fab fa-youtube"></i> <a href="https://youtube.com/@ermunaiorganicfarm"
+              target="_blank">YouTube</a></li>
         </ul>
       </div>
     </div>
 
-    <!-- Social & WhatsApp -->
-    <div class="social">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
-    </div>
     <div class="whatsapp">
-      <a href="https://wa.me/919876543210" target="_blank">
+      <a href="https://wa.me/919841231996" target="_blank">
         <i class="fab fa-whatsapp"></i> Order on WhatsApp
       </a>
     </div>
