--- a/user-authentication/shop.html
+++ b/user-authentication/shop.html
@@ -12,15 +12,15 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: "Segoe UI", sans-serif;
     }
 
     body {
+      font-family: Arial, sans-serif;
       background: #f9faf6;
       color: #333;
     }
 
-    /* ---------- Header ---------- */
+     /* ---------- Header ---------- */
     header {
       display: flex;
       justify-content: space-between;
@@ -158,6 +158,71 @@
       }
     }
 
+
+    /* Cart */
+    .cart {
+      font-size: 22px;
+      color: #333;
+      cursor: pointer;
+    }
+
+    .cart i {
+      color: green;
+    }
+
+    /* Buttons */
+    .btn-login,
+    .btn-signup {
+      padding: 8px 16px;
+      font-size: 14px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+
+    .btn-login {
+      background: transparent;
+      border: 2px solid green;
+      color: green;
+    }
+
+    .btn-login:hover {
+      background: green;
+      color: white;
+    }
+
+    .btn-signup {
+      background: green;
+      border: 2px solid green;
+      color: white;
+    }
+
+    .btn-signup:hover {
+      background: #244021;
+      border-color: #244021;
+    }
+    /* Responsive */
+    @media (max-width: 768px) {
+      header nav ul {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      header nav ul li {
+        margin: 10px 0;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header {
+        flex-direction: column;
+      }
+
+      header .logo img {
+        height: 30px;
+      }
+    }
 
     /* Cart */
     .cart {
@@ -371,6 +436,68 @@
     .buy:hover {
       background: #244021;
     }
+     /* ✅ Footer */
+    footer {
+      background: green;
+      color: white;
+      padding: 30px 20px;
+    }
+
+    .footer-container {
+      max-width: 1400px;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
+    }
+
+    .footer-section h3,
+    .footer-section h4 {
+      margin-bottom: 10px;
+      font-weight: 800;
+    }
+
+    .footer-section ul {
+      list-style: none;
+    }
+
+    .footer-section ul li {
+      margin-bottom: 8px;
+    }
+
+    .footer-section ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s ease, text-decoration 0.3s ease;
+    }
+
+    .footer-section ul li a:hover {
+      color: #ffd700;
+      text-decoration: underline;
+    }
+
+    .whatsapp {
+      margin: 15px 0;
+      text-align: center;
+    }
+
+    .whatsapp a {
+      background: #25D366;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    .footer-bottom {
+      text-align: center;
+      margin-top: 20px;
+      border-top: 1px solid white;
+      padding-top: 10px;
+    }
+
   </style>
 </head>
 
@@ -379,7 +506,7 @@
   <header>
     <div class="logo">
       <img src="logo.jpg" alt="Logo">
-      <span>Erumunai Organic Farm Foods</span>
+      <span>Ermunai Organic Farm Foods</span>
     </div>
 
     <!-- Navigation -->
@@ -387,7 +514,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="shop.html" class="active">Shop</a></li>
-        <li><a href="purchases.html">Purchases</a></li> <!-- ✅ New Item -->
+        <li><a href="purchase.html">Purchases</a></li> <!-- ✅ New Item -->
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -419,6 +546,62 @@
 
   <!-- Product Grid -->
   <div class="product-grid" id="productGrid"></div>
+   <!-- ✅ Footer -->
+  <footer>
+    <div class="footer-container">
+      <div class="footer-section about">
+        <h3>Ermunai Organic Farm Foods</h3>
+        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods,<br>Plot No. 8, Ramalingam
+          St.,BFI,<br>Muraliram Srinivas Flats,<br>Ullagaram,<br>Chennai - 600 091.</p>
+        <p><i class="fa fa-phone"></i> +91 9841231996</p>
+        <p><i class="fab fa-whatsapp"></i> +91 9840752833</p>
+        <p><i class="fa fa-envelope"></i> ermunaiorganicfarm@gmail.com</p>
+      </div>
+
+      <div class="footer-section company">
+        <h4>Company</h4>
+        <ul>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section products">
+        <h4>Products</h4>
+        <ul>
+          <li><a href="#">Ready-to-cook Instant Mixes</a></li>
+          <li><a href="#">Instant Soup Mix</a></li>
+          <li><a href="#">Idli Podi's</a></li>
+          <li><a href="#">Herbal Products</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section follow-us">
+        <h4><i class="fas fa-share-alt"></i> Follow Us</h4>
+        <ul>
+          <li><i class="fab fa-facebook-f"></i> <a href="https://www.facebook.com/ermunaiorganicfoods"
+              target="_blank">Facebook</a></li>
+          <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/ermunaiorganic"
+              target="_blank">Instagram</a></li>
+          <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/ermunai-organic-farm-217035363"
+              target="_blank">LinkedIn</a></li>
+          <li><i class="fab fa-youtube"></i> <a href="https://youtube.com/@ermunaiorganicfarm"
+              target="_blank">YouTube</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="whatsapp">
+      <a href="https://wa.me/919841231996" target="_blank">
+        <i class="fab fa-whatsapp"></i> Order on WhatsApp
+      </a>
+    </div>
+
+    <div class="footer-bottom">
+      <p>© 2024 Ermunai Organic Farm Foods. All rights reserved.</p>
+    </div>
+  </footer>
 
   <script type="module">
 
